// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INJECT DEVELOPMENT should inject both pseudo selector and breakpoint 1`] = `
Array [
  "background-color-red-500",
  "@media(max-width:768px){.background-color-red-500:hover{background-color:#f56565;}
}
",
]
`;

exports[`INJECT DEVELOPMENT should inject group decorators 1`] = `
Array [
  "background-color-red-700",
  ".group:hover .background-color-red-700{background-color:var(--background-color-red-700);}
:root{--background-color-red-700:#c53030;}
.themes-dark{--background-color-red-700:green;}",
]
`;

exports[`INJECT DEVELOPMENT should inject multiple 1`] = `
Array [
  "background-color-red-500",
  "@media(max-width:768px){.background-color-red-500{background-color:#f56565;}
}
",
  "background-color-red-600",
  "@media(max-width:768px){.background-color-red-600:hover{background-color:#e53e3e;}
}
",
]
`;

exports[`INJECT DEVELOPMENT should inject simple 1`] = `
Array [
  "background-color-red-500",
  ".background-color-red-500{background-color:#f56565;}
",
]
`;

exports[`INJECT DEVELOPMENT should inject themes 1`] = `
Array [
  "background-color-red-700",
  "@media(max-width:768px){.background-color-red-700{background-color:var(--background-color-red-700);}
}
:root{--background-color-red-700:#c53030;}
.themes-dark{--background-color-red-700:green;}",
]
`;

exports[`INJECT DEVELOPMENT should inject with breakpoint 1`] = `
Array [
  "background-color-red-500",
  "@media(max-width:768px){.background-color-red-500{background-color:#f56565;}
}
",
]
`;

exports[`INJECT DEVELOPMENT should inject with multiple breakpoints 1`] = `
Array [
  "background-color-red-500",
  "@media(max-width:640px){.background-color-red-500{background-color:#f56565;}
}
@media(max-width:1280px){.background-color-red-500{background-color:#f56565;}
}
",
]
`;

exports[`INJECT DEVELOPMENT should inject with multiple pseudo selectors 1`] = `
Array [
  "background-color-red-500",
  ".background-color-red-500:hover:first-child{background-color:#f56565;}
",
]
`;

exports[`INJECT DEVELOPMENT should inject with pseudo selector 1`] = `
Array [
  "background-color-red-500",
  ".background-color-red-500:hover{background-color:#f56565;}
",
]
`;
